--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bn.js": "^5.1.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
+    "@types/pg": "^8.15.2",
     "bn.js": "^5.2.2",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.27.0",
@@ -51,6 +52,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "ioredis": "^5.6.1",
+    "pg": "^8.16.0",
     "zod": "^3.24.2"
   }
 }
