--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@libsql/client": "^0.15.7",
     "@raydium-io/raydium-sdk-v2": "^0.1.138-alpha",
     "@solana/web3.js": "^1.98.0",
@@ -50,9 +51,9 @@
     "decimal.js": "^10.5.0",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
+    "drizzle-orm": "^0.44.1",
     "ioredis": "^5.6.1",
-    "pg": "^8.16.0",
+    "postgres": "^3.4.7",
     "zod": "^3.24.2"
   }
 }
